--- a/templates/writing_page_mix.html
+++ b/templates/writing_page_mix.html
@@ -120,8 +120,8 @@
         }
 
         #markdownInput {
-            height: 70%;
-            resize: vertical;
+            height: 60%;
+            resize: none;
         }
 
         .markdown-buttons button {
