--- a/templates/writing_page_mix.html
+++ b/templates/writing_page_mix.html
@@ -243,7 +243,7 @@
                             <button type="button" class="basic-btn" style="background-color: gray;">취소</button>
                         </a>
                         <div style="display:none">
-                            <input id="titl" name="title" type="text">
+                            <input id="title" name="title" type="text">
                             <textarea id="mcontent" name="mcontent"></textarea>
                             <textarea id="hcontent" name="content"></textarea>
                         </div>
