--- a/templates/commentmine.html
+++ b/templates/commentmine.html
@@ -250,7 +250,7 @@
                 <hr>
                 <p>
                     <span class="label-container">
-                        🏅 <span><a href ="{{ url_for('showmine') }}">작성한 글</a></span>
+                        🏅 <span><a href ="{{ url_for('showmine',number = 1) }}">작성한 글</a></span>
                     </span>
                     <span>{{mst}}개</span>
                 </p>
