--- a/templates/change.html
+++ b/templates/change.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-            <!-- bootstrap CSS -->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- jQuery and Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -81,11 +81,19 @@
 
         /* 작성 영역 */
         .write-content,
-        .see-content {
+        .see-wrap {
             flex: 1;
+            overflow-y: auto;
+        }
+
+        .write-content {
+            height: 90%;
+        }
+
+        .write-content,
+        .see-content {
             background-color: white;
             padding: 20px;
-            overflow-y: auto;
         }
 
         .write-content label {
@@ -112,8 +120,8 @@
         }
 
         #markdownInput {
-            height: 67%;
-            resize: vertical;
+            height: 60%;
+            resize: none;
         }
 
         .markdown-buttons button {
@@ -123,8 +131,13 @@
             cursor: pointer;
         }
 
+        .see-wrap {
+            height: 100%;
+        }
+
         /* 미리보기 영역 */
         .see-content {
+            height: 90%;
             background-color: white;
         }
 
@@ -155,8 +168,10 @@
             display: flex;
             justify-content: space-between;
         }
+
         /* 버튼 스타일 추가 */
         .basic-btn {
+            border: none;
             color: white;
             font-size: 16.5px;
             background-color: #5E2EED;
@@ -165,6 +180,14 @@
             height: 32px;
         }
 
+        /* 버튼을 오른쪽 끝으로 정렬 */
+        .button-container {
+            display: flex;
+            justify-content: flex-end;
+            /* 오른쪽 끝 정렬 */
+            margin-top: 12px;
+            /* 버튼과 미리보기 창 사이 간격 */
+        }
     </style>
 </head>
 
@@ -178,7 +201,7 @@
         <div class="user-info">
             <img src="../static/user.png" alt="사용자">
             <span>{{ ID }}번 훈련생</span>
-            <span class="logout"><a href ="{{ url_for('logout')}}">로그아웃</a></span>
+            <span class="logout"><a href="{{ url_for('logout')}}">로그아웃</a></span>
         </div>
     </div>
 
@@ -187,12 +210,7 @@
             <p class="TIL">TODAY I LEARN</p>
             <!-- 버튼들을 감싸는 div 추가 -->
 
-            <div class="header-buttons">
-                <!-- 버튼들 클래스 추가 -->
-                <a href="{{ url_for('main') }}"><button class="basic-btn"
-                        style="background-color: gray; margin: 30px 50px 10px 0;">취소</button></a>
-                <!-- <a href = "{{ url_for('main') }}"><button>취소</button></a> -->
-            </div>
+
         </div>
         <div class="content2">
             <div class="write-content">
@@ -212,18 +230,30 @@
                 </div>
                 <textarea id="markdownInput" placeholder="내용을 입력하세요.">{{origin.md}}</textarea>
             </div>
-            <div class="see-content">
-                <h1 id="titlePreview"></h1>
-                <div id="htmlOutput"></div>
-            </div>
-            <form method="post" action="{{url_for('change',id = origin._id)}}">
-                <div style="display:none">
-                    <input id="titl" name = "title" type="text" value="{{origin.title}}">
-                    <textarea id="mcontent" name = mcontent>{{origin.md}}</textarea>
-                    <textarea id="hcontent" name = "content">{{origin.content}}</textarea>
+
+            <div class="see-wrap">
+                <div class="see-content">
+                    <h1 id="titlePreview"></h1>
+                    <div id="htmlOutput"></div>
                 </div>
-                <button type="submit" class="basic-btn">출간하기</button>
-            </form>
+
+                <div class="button-container">
+                    <form method="post" action="{{url_for('change',id = origin._id)}}">
+                        <button type="submit" class="basic-btn">수정하기</button>
+                        <div style="display:none">
+                            <input id="titl" name="title" type="text" value="{{origin.title}}">
+                            <textarea id="mcontent" name=mcontent>{{origin.md}}</textarea>
+                            <textarea id="hcontent" name="content">{{origin.content}}</textarea>
+                        </div>
+                        <!-- <button type="submit" class="basic-btn">수정하기</button> -->
+                    </form>
+
+                    <!-- 버튼들 클래스 추가 -->
+                    <a href="{{ url_for('main') }}"><button type="button" class="basic-btn"
+                            style="background-color: gray;">취소</button></a>
+                    <!-- <a href = "{{ url_for('main') }}"><button>취소</button></a> -->
+                </div>
+            </div>
         </div>
     </main>
 
