--- a/templates/after_login.html
+++ b/templates/after_login.html
@@ -290,7 +290,7 @@
     </div>
 
         <div class="page-list">
-            {% if  nums > 1 %}
+            {% if  nums > 1 and (nums%10 != 0) %}
             <span><button type="button" class="btn">◀</button></span>
                 <span>
     
