--- a/templates/after_login_mine.html
+++ b/templates/after_login_mine.html
@@ -290,7 +290,7 @@
     </div>
 
     <div class="page-list">
-        {% if nums > 1 and nums%10 != 0 %}
+        {% if nums > 1 %}
         <span><button type="button" class="btn">◀</button></span>
         <span>
             {% for num in range((set*10)+1, nums+1) %}
