--- a/templates/after_login.html
+++ b/templates/after_login.html
@@ -255,15 +255,15 @@
             <hr>
             <p>
                 <span class="label-container">
-                    ▶ <span><a href="{{ url_for('showmine',number = 1) }}">작성한 글</a></span>
+                    🏅 <span><a style="text-decoration-line : none;  color: black;" href="{{ url_for('showmine',number = 1) }}">작성한 글</a></span>
                 </span>
-                <span>{{mst}}개</span>
+                <span >{{mst}}개</span>
             </p>
             <p>
                 <span class="label-container">
-                    ▶ <span><a href="{{ url_for('comentmine') }}">작성한 댓글</a></span>
+                    🏅 <span><a style="text-decoration-line : none; color: black;" href="{{ url_for('comentmine') }}">작성한 댓글</a></span>
                 </span>
-                <span>{{rst}}개</span>
+                <span >{{rst}}개</span>
             </p>
             <p class="pw-edit"><a href="{{ url_for('cpw') }}">비밀번호 수정</a></p>
         </div>
@@ -278,7 +278,7 @@
                 <hr>
                 <div>
                     <p class="article">
-                        <a href="{{ url_for('showup', id=item._id) }}">{{ item.title }}</a>
+                        <a style="text-decoration-line : none; color: black;" href="{{ url_for('showup', id=item._id) }}">{{ item.title }}</a>
                         <span>{{item.month}}월 {{item.day}}일</span>
                     </p>
                 </div>
