--- a/templates/after_login_mine.html
+++ b/templates/after_login_mine.html
@@ -294,7 +294,7 @@
         <span><button type="button" class="btn">◀</button></span>
         <span>
             {% for num in range((set*10)+1, nums+1) %}
-            <a href="{{ url_for('page', number=num) }}"><button type="button" class="btn">{{ num }}</button></a>
+            <a href="{{ url_for('showmine', number=num) }}"><button type="button" class="btn">{{ num }}</button></a>
             {% endfor %}
         </span>
         <span><button type="button" class="btn">▶</button></span>
