--- a/templates/after_login_mine.html
+++ b/templates/after_login_mine.html
@@ -223,7 +223,6 @@
 
         .page-list {
             position: fixed;
-            bottom: 40px;
             left: 50%;
             /* 수평 정렬 */
             transform: translateX(-50%);
@@ -245,7 +244,7 @@
         <div class="user-info">
             <img src="../static/user.png" alt="사용자">
             <span>{{ ID }}번 훈련생</span>
-            <span class="logout"><a href="{{ url_for('logout')}}">로그아웃</a></span>
+            <span class="logout"><a style="color: gray;" href="{{ url_for('logout')}}">로그아웃</a></span>
         </div>
     </div>
 
@@ -255,17 +254,17 @@
             <hr>
             <p>
                 <span class="label-container">
-                    ▶ <span><a href="{{ url_for('showmine',number = 1) }}">작성한 글</a></span>
+                    🏅 <span><a style="text-decoration-line : none;  color: black;" href="{{ url_for('showmine',number = 1) }}">작성한 글</a></span>
                 </span>
                 <span>{{mst}}개</span>
             </p>
             <p>
                 <span class="label-container">
-                    ▶ <span><a href="{{ url_for('comentmine') }}">작성한 댓글</a></span>
+                    🏅 <span><a style="text-decoration-line : none;  color: black;" href="{{ url_for('comentmine') }}">작성한 댓글</a></span>
                 </span>
                 <span>{{rst}}개</span>
             </p>
-            <p class="pw-edit"><a href="{{ url_for('cpw') }}">비밀번호 수정</a></p>
+            <p class="pw-edit"><a style="color: gray;" href="{{ url_for('cpw') }}">비밀번호 수정</a></p>
         </div>
 
         <div class="content">
@@ -278,7 +277,7 @@
                 <hr>
                 <div>
                     <p class="article">
-                        <a href="{{ url_for('showup', id=item._id) }}">{{ item.title }}</a>
+                        <a style="text-decoration-line : none;  color: black;" href="{{ url_for('showup', id=item._id) }}">{{ item.title }}</a>
                         <span>{{item.month}}월 {{item.day}}일</span>
                     </p>
                 </div>
