--- a/templates/after_login_mine.html
+++ b/templates/after_login_mine.html
@@ -223,11 +223,24 @@
 
         .page-list {
             position: fixed;
-            left: 50%;
-            /* 수평 정렬 */
-            transform: translateX(-50%);
-            /* 수평 정렬 */
+            bottom: 40px;
+            left: 50%; /* 수평 정렬 */
+            transform: translateX(-50%); /* 수평 정렬 */
         }
+
+        .page-num {
+            font-size: 15px;
+            color: #111111;
+            margin: 0 15px;
+            letter-spacing: 5px;
+        }
+
+        .page-btn {
+            background-color: transparent;
+            border: transparent;
+            color: #a1a1a1;
+        }
+
     </style>
 
     <script>
@@ -290,13 +303,13 @@
 
     <div class="page-list">
         {% if nums > 1 %}
-        <span><button type="button" class="btn">◀</button></span>
-        <span>
+        <span><button type="button" class="left page-btn">◀</button></span>
+        <span class="page-num">
             {% for num in range((set*10)+1, nums+1) %}
             <a href="{{ url_for('showmine', number=num) }}"><button type="button" class="btn">{{ num }}</button></a>
             {% endfor %}
         </span>
-        <span><button type="button" class="btn">▶</button></span>
+        <span><button type="button" class="right page-btn">▶</button></span>
         {% endif %}
     </div>
 </body>
