--- a/templates/after_login_mine.html
+++ b/templates/after_login_mine.html
@@ -6,10 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <!-- Optional JavaScript -->
     <!-- jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -203,8 +199,10 @@
         }
 
         .content-list hr {
-            border: 0.5px solid #EEEBF7;
-            margin: 0;
+            display: block;
+            width: 100%;
+            border: 0.5px solid white;
+            margin: 100px 0 10px 0;
         }
 
         .article {
