--- a/templates/after_login.html
+++ b/templates/after_login.html
@@ -301,7 +301,7 @@
         <span><button type="button" class="left page-btn">◀</button></span>
         <span class="page-num">
             {% for num in range((set*10)+1, nums+1) %}
-            <a href="{{ url_for('showmine', number=num) }}"><button type="button" class="btn">{{ num }}</button></a>
+            <a href="{{ url_for('page', number=num) }}"><button type="button" class="btn">{{ num }}</button></a>
             {% endfor %}
         </span>
         <span><button type="button" class="right page-btn">▶</button></span>
