--- a/templates/after_login_mine.html
+++ b/templates/after_login_mine.html
@@ -199,10 +199,8 @@
         }
 
         .content-list hr {
-            display: block;
-            width: 100%;
-            border: 0.5px solid white;
-            margin: 100px 0 10px 0;
+            border: 0.5px solid #EEEBF7;
+            margin: 0;
         }
 
         .article {
