--- a/templates/change.html
+++ b/templates/change.html
@@ -249,7 +249,7 @@
 
                 <div class="button-container">
                     <form method="post" action="{{url_for('change',ids = origin._id)}}">
-                        <button type="submit" class="basic-btn">수정하기</button>
+                        <button type="submit" class="basic-btn" style="cursor: pointer;">수정하기</button>
                         <div style="display:none">
                             <input id="titl" name="title" type="text" value="{{origin.title}}">
                             <textarea id="mcontent" name=mcontent>{{origin.md}}</textarea>
@@ -260,7 +260,7 @@
 
                     <!-- 버튼들 클래스 추가 -->
                     <a href="{{ url_for('showup' , id = origin._id) }}"><button type="button" class="basic-btn"
-                            style="background-color: gray;">취소</button></a>
+                            style="background-color: gray; cursor: pointer;">취소</button></a>
                     <!-- <a href = "{{ url_for('main') }}"><button>취소</button></a> -->
                 </div>
             </div>
