--- a/templates/writing_page_mix.html
+++ b/templates/writing_page_mix.html
@@ -266,9 +266,9 @@
                 case 'h2': insertion = `## ${selectedText}`; cursorOffset = 3; break;
                 case 'h3': insertion = `### ${selectedText}`; cursorOffset = 4; break;
                 case 'h4': insertion = `#### ${selectedText}`; cursorOffset = 5; break;
-                case 'bold': insertion = `**{selectedText}**`; cursorOffset = 2; break;
-                case 'italic': insertion = `*{selectedText}*`; cursorOffset = 1; break;
-                case 'quote': insertion = `> {selectedText}`; cursorOffset = 2; break;
+                case 'bold': insertion = `**${selectedText}**`; cursorOffset = 2; break;
+                case 'italic': insertion = `*${selectedText}*`; cursorOffset = 1; break;
+                case 'quote': insertion = `> ${selectedText}`; cursorOffset = 2; break;
                 case 'code': insertion = `\`\`\`python\n${selectedText}\n\`\`\``; cursorOffset = 9; break;
             } 
 
