--- a/templates/password_edit.html
+++ b/templates/password_edit.html
@@ -184,7 +184,7 @@
                 <img src="../static/edit.png">
                 <form method="post" action="{{ url_for('password') }}">
                 <div class="login-input">
-                    <input type="text" name = "password" placeholder="수정할 비밀번호를 입력하세요."><br>
+                    <input type="password" name = "password" placeholder="수정할 비밀번호를 입력하세요."><br>
                     <input type="password" name = "check" placeholder="비밀번호를 한번 더 입력하세요.">
                 </div>
                 <button type = "submit" class="login-btn">수정하기</button>
