--- a/templates/change.html
+++ b/templates/change.html
@@ -278,14 +278,14 @@
             let cursorOffset = 0;
 
             switch (type) {
-                case 'h1': insertion = '# '; cursorOffset = 2; break;
-                case 'h2': insertion = '## '; cursorOffset = 3; break;
-                case 'h3': insertion = '### '; cursorOffset = 4; break;
-                case 'h4': insertion = '#### '; cursorOffset = 5; break;
-                case 'bold': insertion = '****'; cursorOffset = 2; break;
-                case 'italic': insertion = '**'; cursorOffset = 1; break;
-                case 'quote': insertion = '> '; cursorOffset = 2; break;
-                case 'code': insertion = '```python\n\n```'; cursorOffset = 9; break;
+                case 'h1': insertion = `# ${selectedText}`; cursorOffset = 2; break;
+                case 'h2': insertion = `## ${selectedText}`; cursorOffset = 3; break;
+                case 'h3': insertion = `### ${selectedText}`; cursorOffset = 4; break;
+                case 'h4': insertion = `#### ${selectedText}`; cursorOffset = 5; break;
+                case 'bold': insertion = `**${selectedText}**`; cursorOffset = 2; break;
+                case 'italic': insertion = `*${selectedText}*`; cursorOffset = 1; break;
+                case 'quote': insertion = `> ${selectedText}`; cursorOffset = 2; break;
+                case 'code': insertion = `\`\`\`python\n${selectedText}\n\`\`\``; cursorOffset = 10; break;
             }
 
             textarea.value = text.substring(0, start) + insertion + text.substring(end);
