--- a/templates/after_login_mine.html
+++ b/templates/after_login_mine.html
@@ -225,6 +225,8 @@
         }
 
         .page-num {
+            background-color: transparent;
+            border: none;
             font-size: 15px;
             color: #111111;
             margin: 0 15px;
