페이지 번호 디자인 수정

--- a/templates/after_login_mine.html
+++ b/templates/after_login_mine.html
@@ -218,7 +218,7 @@
         }
 
         .page-list {
-            position: fixed;
+            position: sticky;
             bottom: 40px;
             left: 50%; /* 수평 정렬 */
             transform: translateX(-50%); /* 수평 정렬 */
