--- a/templates/commentmine.html
+++ b/templates/commentmine.html
@@ -208,13 +208,15 @@
             }
 
             .page-list {
-                position: fixed;
+                position: sticky;
                 bottom: 40px;
                 left: 50%; /* 수평 정렬 */
                 transform: translateX(-50%); /* 수평 정렬 */
             }
 
             .page-num {
+                background-color: transparent;
+                border: none;
                 font-size: 15px;
                 color: #111111;
                 margin: 0 15px;
