페이지 버튼수정

--- a/templates/commentmine.html
+++ b/templates/commentmine.html
@@ -207,16 +207,17 @@
                 margin: 0;
             }
 
+
             .page-list {
-                position: absolute;
+                position: sticky;
                 bottom: 40px;
                 left: 50%; /* 수평 정렬 */
                 transform: translateX(-50%); /* 수평 정렬 */
             }
 
-            .page-num {
+            .btn {
                 background-color: transparent;
-                border: none;
+                border: transparent;
                 font-size: 15px;
                 color: #111111;
                 margin: 0 15px;
