숫자 투명화 수정

--- a/templates/after_login_mine.html
+++ b/templates/after_login_mine.html
@@ -218,7 +218,7 @@
         }
 
         .page-list {
-            position: sticky;
+            position: absolute;
             bottom: 40px;
             left: 50%; /* 수평 정렬 */
             transform: translateX(-50%); /* 수평 정렬 */
@@ -232,7 +232,14 @@
             margin: 0 15px;
             letter-spacing: 5px;
         }
+        .page-num {
 
+
+            font-size: 15px;
+            color: #111111;
+            margin: 0 15px;
+            letter-spacing: 5px;
+        }
         .page-btn {
             background-color: transparent;
             border: transparent;
