--- a/templates/commentmine.html
+++ b/templates/commentmine.html
@@ -209,7 +209,7 @@
 
 
             .page-list {
-                position: sticky;
+                position: absolute;
                 bottom: 40px;
                 left: 50%; /* 수평 정렬 */
                 transform: translateX(-50%); /* 수평 정렬 */
@@ -223,7 +223,14 @@
                 margin: 0 15px;
                 letter-spacing: 5px;
             }
+            .page-num {
 
+
+            font-size: 15px;
+            color: #111111;
+            margin: 0 15px;
+            letter-spacing: 5px;
+            }
             .page-btn {
                 background-color: transparent;
                 border: transparent;
