--- a/templates/after_login.html
+++ b/templates/after_login.html
@@ -219,7 +219,7 @@
 
 
         .page-list {
-            position: sticky;
+            position: absolute;
             bottom: 40px;
             left: 50%; /* 수평 정렬 */
             transform: translateX(-50%); /* 수평 정렬 */
@@ -233,7 +233,14 @@
             margin: 0 15px;
             letter-spacing: 5px;
         }
-
+        .page-num {
+ 
+ 
+            font-size: 15px;
+            color: #111111;
+            margin: 0 15px;
+            letter-spacing: 5px;
+        }
         .page-btn {
             background-color: transparent;
             border: transparent;
